# english-tutor

./: .gitignore  README.md  pyproject.toml  study
.claude/agents/: english-tutor.md
.claude/commands/: english-tutor.md
.claude/skills/phase-listening/: SKILL.md
.claude/skills/phase-review/: SKILL.md
.claude/skills/phase-shadowing/: SKILL.md
.claude/skills/phase-speaking/: SKILL.md
.claude/skills/phase-vocab/: SKILL.md
.kiro/agents/: english-tutor-prompt.md  english-tutor.json  english-tutor.md
.kiro/skills/material-new/: SKILL.md
.kiro/skills/phase-dictation/: SKILL.md
.kiro/skills/phase-listening/: SKILL.md
.kiro/skills/phase-review/: SKILL.md
.kiro/skills/phase-shadowing/: SKILL.md
.kiro/skills/phase-speaking/: SKILL.md
.kiro/skills/phase-vocab/: SKILL.md
.kiro/skills/start/: SKILL.md
dashboard/: app.py  db.py
dashboard/views/: home.py  material_detail.py  vocab_list.py
english-tutor/: forge.config.ts  global.d.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
english-tutor/src/main/: main.ts
english-tutor/src/main/claude/: runner.ts  tasks.ts
english-tutor/src/preload/: preload.ts
english-tutor/src/renderer/: App.tsx  index.css  main.tsx
english-tutor/src/shared/: ipc.ts  phases.ts  types.ts
spec/: PLAN.md
src/english_tutor/audio/: tts.py
src/english_tutor/db/: connection.py  schema.sql
src/english_tutor/flow/: due.py  mastery.py  material.py  mistakes.py  profile.py  record.py  session.py  state.py
(+53 files in other folders)
